--- a/traveltime/package.json
+++ b/traveltime/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.18.1",
     "react": "^15.5.4",
+    "react-datetime": "^2.8.10",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
