--- a/traveltime/package.json
+++ b/traveltime/package.json
@@ -6,7 +6,8 @@
     "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-datetime": "^2.8.10",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-places-autocomplete": "^5.3.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
