--- a/traveltime/package.json
+++ b/traveltime/package.json
@@ -6,6 +6,7 @@
     "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-alert": "^2.0.1",
+    "react-bootstrap": "^0.31.0",
     "react-datetime": "^2.8.10",
     "react-dom": "^15.5.4",
     "react-places-autocomplete": "^5.3.0"
