--- a/traveltime/package.json
+++ b/traveltime/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap": "^0.31.0",
     "react-datetime": "^2.8.10",
     "react-dom": "^15.5.4",
+    "react-ga": "^2.2.0",
     "react-places-autocomplete": "^5.3.0"
   },
   "devDependencies": {
